task1,task2,task3,task4

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -21,39 +21,26 @@
     <div class="row">
       <div class="col-sm-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="/">Node-express</a>
+          <a class="navbar-brand" href="/">Neiro city</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">    
-              <li class="nav-item">                  
-                  <a class="nav-link" href="/products">
-                    <i class="fas fa-list-ul"></i>
-                    &nbsp;Продукты
-                  </a>
-              </li>          
-              <li class="nav-item">
-                <a class="nav-link" href="/about">
-                  <i class="fab fa-adn"></i>
-                  &nbsp;О нас
-                </a>
-              </li>            
-              <!--<li class="nav-item dropdown">
+            <ul class="navbar-nav mr-auto">               
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
+                  Номера заданий
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="/">Задание №1</a>
+                  <a class="dropdown-item" href="/canvas">Задание №2</a>
+                  <a class="dropdown-item" href="/amd-common">Задание №3</a>
+                  <a class="dropdown-item" href="/user-factory">Задание №4</a>
+                  <a class="dropdown-item" href="/ajax">Задание №5</a>
+                  <a class="dropdown-item" href="/socket">Задание №6</a>
                 </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li>-->
             </ul>
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
