--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -1,12 +1,9 @@
 <div class="row">
     <div class="col-sm-12">
         <% layout('../layout') -%>                
-        <main role="main" class="inner cover">
-                <h1 class="cover-heading"><%= title %></h1>
-                <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-                <p class="lead">
-                  <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-                </p>
-              </main>
+        <div class="ui-field-contain">
+          <label for="slider-3">Input slider:</label>
+          <input type="range" name="slider-3" id="slider-3" value="25" min="0" max="100" data-theme="b" data-track-theme="a">
+        </div>
     </div>
 </div>
