task7,task8,task9

--- a/app/views/pages/sockets.ejs
+++ b/app/views/pages/sockets.ejs
@@ -1,4 +1,5 @@
-<div class="row">
+<script src="http://localhost:8080/socket.io/socket.io.js"></script>
+<div id="socket" class="row">
     <div class="col-sm-12">
         <% layout('../layout') -%>                
         <div id="socket" class="row">
