--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -14,11 +14,6 @@
 <body>
   <div class="container">    
     <div class="row">
-         
-    </div>
-  </div>  
-  <div class="container">    
-    <div class="row">
       <div class="col-sm-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand" href="/">Neiro city</a>
@@ -39,6 +34,11 @@
                   <a class="dropdown-item" href="/user-factory">Задание №4</a>
                   <a class="dropdown-item" href="/ajax">Задание №5</a>
                   <a class="dropdown-item" href="/socket">Задание №6</a>
+                  <a class="dropdown-item" href="/verstka-css">Задание №7 CSS</a>
+                  <a class="dropdown-item" href="/verstka-js">Задание №7 JS</a>
+                  <a class="dropdown-item" href="/verstka-html">Задание №7 HTML ONE PAGE</a>
+                  <a class="dropdown-item" href="/animation">Задание №8</a>
+                  <a class="dropdown-item" href="/random">Задание №9</a>
                 </div>
               </li>
             </ul>
