--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,50 +4,73 @@
 body {
   background-color: #ececec !important;
 }
- /* ================ Navbar =================== */
-.container .row nav.navbar {
-  margin-bottom: 10px;
-}
 
-/* ================ Login button block =================== */
-#login .form-group {
+/* ================ Verstka css =================== */
+#verstka-css .wrap-parent {
   position: relative;
 }
 
-#login .invalid-feedback {
+#verstka-css .parent {
+  width: 400px;
+  height: 300px;
+  background: rgba(0, 12, 17, 0.2);
+  display: inline-block;
+  position: relative;
+}
+
+#verstka-css .child {
+  width: 200px;
+  height: 150px;
+  background: rgb(20, 96, 168);
+  display: inline-block;
   position: absolute;
   top: 0px;
+  left: 0px;
   right: 0px;
-  text-align: right;
+  bottom: 0px;
+  margin: auto;
 }
 
-.in-out-block {
-  margin-top: 10px;
-  margin-bottom: 10px;
+/* ================ Verstka js =================== */
+#verstka-js .wrap-parent {
+  position: relative;
 }
 
-/* ================ User info block =================== */
-#user-info {
-  margin-top: auto;
-  margin-bottom: auto;
+#verstka-js .parent {
+  width: 400px;
+  height: 300px;
+  background: rgba(0, 12, 17, 0.2);
+  display: inline-block;
+  position: relative;
 }
 
-/* ================ User list Table =================== */
-#users-list {
-  margin-top: 5px;
+#verstka-js .child {
+  width: 200px;
+  height: 150px;
+  background: rgb(20, 96, 168);
+  display: inline-block;
 }
-#users-list > tbody > tr > td {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 30px;
+/* ================ Animation  =================== */
+#animation {
+  padding-top: 10px;
 }
 
-/* ================ Breadcrumbs =================== */
-.breadcrumb {
-  margin-bottom: 5px;
-  background-color: #dee2e6 !important;
-  border: 1px solid #d8d6d6;
+#animation .row > div.anm-block {
+  background: purple;
+  height: 200px;
+  display: none;
+}
+
+#animation .row:nth-child(1) {
+  margin-bottom: 15px;
+}
+/* ================ Random  =================== */
+#random .wrap {
+  position: relative;
+}
+#random .wrap > div {
+  height: 20px;
+  width: 20px;
 }
 
 /* ================ Helpers =================== */
@@ -56,42 +79,8 @@ body {
   margin-bottom: auto;
 }
 
-/* ================ Add User Form =================== */
-#form-add-user .invalid-feedback {
-  position: absolute;
-  top: -22px;
-  right: 0;
-  text-align: right;
-}
-
-/* ================ Products =================== */
-.del-product {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  line-height: 1.1;
-  opacity: 0.5;
-}
-.media {
-  font-size: 10pt;
-}
-.card-body {
-  background: #868f96;
-  padding: 10px 15px 15px 15px !important;
-}
-
-.page-item.active.disabled > a {
-  color: #fff !important;
-  background-color: #007bff !important;
-  border-color: #007bff !important;
-} 
 
 
 @media (max-width: 767px) {
-  #count-products {
-    margin-bottom: 10px;
-  }
-  .btn-group {
-    margin-bottom: 10px;
-  }
+
 }
