--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -30,7 +30,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="/">Задание №1</a>
                   <a class="dropdown-item" href="/canvas">Задание №2</a>
-                  <a class="dropdown-item" href="/amd-common">Задание №3</a>
+                  <a class="dropdown-item" href="/common">Задание №3</a>
                   <a class="dropdown-item" href="/user-factory">Задание №4</a>
                   <a class="dropdown-item" href="/ajax">Задание №5</a>
                   <a class="dropdown-item" href="/socket">Задание №6</a>
